v0.7.0, <RELEASE DATE HERE>:

* Moved some extraneous logging when generating a Visual Studio solution to only show when verbose logging (-v) argument is specified.
* Hide unecessary warning that gets fired when doing a hashmap lookup.
* Time more than just the total time taken to run Builder.exe from start to finish.
	* We're doing this to get a better idea of where build time is being spent when using Builder and therefore how we can make Builder faster.
	* We now also log:
		* User config build.
		* Visual Studio solution generation time.
		* The time taken to just run the compiler subprocess.
		* .build_info file read and write time.
		* Dependency file read time.
		* Maybe more, in future.

----------------------------------------------------------------

v0.6.4, 07/04/2025:

* Reduced build times!
	* #include dependency resolution is now done through Clang's -MD arg, which is faster than the custom solution Builder had for this.
	* This will produce .d files that get put into the .builder folder.
* Fixed Builder hanging if a Visual Studio project had multiple folders in its name.
* Fixed BuildConfig::warnings_as_errors not being read from/written to the .build_info file.
* Better and more accurate documentation.
* Moved Clang version into builder.h so that users can see and check what version of Clang Builder uses, if they need to.
* Refactored a bunch of things internally that will mean nothing to the end-user, but internally things are a lot cleaner now.

----------------------------------------------------------------

v0.6.3, 08/03/2025:

* Old Visual Studio files now get deleted when generating a Solution.
	* If a user renamed a project, for example, then the project under the old name would get kept around causing subtle storage bloat.  This change fixes that.

----------------------------------------------------------------

v0.6.2, 02/03/2025:

* Change all std::vector<const char*> in builder.h to std::vector<std::string>.